--- a/Char5.선택문/If ~ else If ~ else 문/If ~ else If ~ else 문.vcxproj.filters
+++ b/Char5.선택문/If ~ else If ~ else 문/If ~ else If ~ else 문.vcxproj.filters
@@ -15,8 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="bit move.c">
+    <ClCompile Include="If ~ else If ~ else .c">
       <Filter>소스 파일</Filter>
-    </None>
+    </ClCompile>
   </ItemGroup>
 </Project>
