--- a/Char07.함수/Char01.함수정의/Char01.함수정의.vcxproj
+++ b/Char07.함수/Char01.함수정의/Char01.함수정의.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{02cf2671-3c47-46ab-b8b0-1d6a51ecfad6}</ProjectGuid>
-    <RootNamespace>실습2</RootNamespace>
+    <ProjectGuid>{7b244eed-19d1-45e8-8ccd-8fb668a38332}</ProjectGuid>
+    <RootNamespace>Char01함수정의</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Char7-1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="계산기2.c" />
+    <ClCompile Include="func3.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
