--- a/Char07.함수/Char01.함수정의/Char01.함수정의.vcxproj.filters
+++ b/Char07.함수/Char01.함수정의/Char01.함수정의.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="계산기2.c">
+    <ClCompile Include="func3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
