--- a/Char07.함수/Char02.함수호출과 반환/Char02.함수호출과 반환.vcxproj
+++ b/Char07.함수/Char02.함수호출과 반환/Char02.함수호출과 반환.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{02cf2671-3c47-46ab-b8b0-1d6a51ecfad6}</ProjectGuid>
-    <RootNamespace>실습2</RootNamespace>
+    <ProjectGuid>{00f3684e-7b43-471a-a2b8-fcade1009b43}</ProjectGuid>
+    <RootNamespace>Char02함수호출과반환</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Char7-2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="계산기2.c" />
+    <ClCompile Include="매개변수가 없는 함수.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
