--- a/Char07.함수/Char02.함수호출과 반환/Char02.함수호출과 반환.vcxproj.filters
+++ b/Char07.함수/Char02.함수호출과 반환/Char02.함수호출과 반환.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="계산기2.c">
+    <ClCompile Include="매개변수가 없는 함수.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
