--- a/Char07.함수/실습/실습.vcxproj.filters
+++ b/Char07.함수/실습/실습.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="계산기2.c">
+    <ClCompile Include="함수 계산기.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
