--- a/Char6.반복문/4.break,contunue 분기문/4.break,contunue 분기문.vcxproj
+++ b/Char6.반복문/4.break,contunue 분기문/4.break,contunue 분기문.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{02cf2671-3c47-46ab-b8b0-1d6a51ecfad6}</ProjectGuid>
-    <RootNamespace>실습2</RootNamespace>
+    <ProjectGuid>{6622414c-40cb-406a-bb78-e6bce7f9f5ca}</ProjectGuid>
+    <RootNamespace>My4breakcontunue분기문</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="계산기2.c" />
+    <ClCompile Include="break,contunue 분기문.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
