--- a/Char4.연산자/Char4-4/Char4-4.vcxproj
+++ b/Char4.연산자/Char4-4/Char4-4.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c2905bca-fd1f-46e8-90c2-320da55967ff}</ProjectGuid>
+    <ProjectGuid>{a3ea915e-7a66-4eee-a6c2-3e72aad539dc}</ProjectGuid>
     <RootNamespace>Char44</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Char4-4</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Char 4-4.c" />
+    <ClCompile Include="전,후위 표기를 사용한 증감 연산.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
