--- a/Char14.다차원배열, 포인터배열/실습/실습.vcxproj
+++ b/Char14.다차원배열, 포인터배열/실습/실습.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="문제1.c" />
+    <ClCompile Include="참고.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
