--- a/Char08.배열/Char8-2/Char8-2.vcxproj
+++ b/Char08.배열/Char8-2/Char8-2.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f68de391-e3fe-4cf5-b94b-5ed88c2dfe6d}</ProjectGuid>
-    <RootNamespace>My117Char114</RootNamespace>
+    <ProjectGuid>{914e7d92-9449-4424-aa52-5672ebc7718f}</ProjectGuid>
+    <RootNamespace>Char82</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Char11-4</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="버퍼를 사용하는 문자 입력.c" />
+    <ClCompile Include="배열과 반복문을 사용한 성적 처리 프로그램.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
