--- a/Char07.함수/Char01.함수정의/Char01.함수정의.vcxproj
+++ b/Char07.함수/Char01.함수정의/Char01.함수정의.vcxproj
@@ -140,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="func3.c" />
+    <ClCompile Include="2개의 함수로 만든 프로그램.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
