--- a/Char08.배열/Char08.배열/Char08.배열.vcxproj.filters
+++ b/Char08.배열/Char08.배열/Char08.배열.vcxproj.filters
@@ -14,4 +14,9 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="5명의 나이를 저장할 배열 선언하고, 사용하는 방법.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
