--- a/Char08.배열/Char8-4/Char8-4.vcxproj.filters
+++ b/Char08.배열/Char8-4/Char8-4.vcxproj.filters
@@ -15,13 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Char10-1.c">
+    <ClCompile Include="문자열을 저장하는 char형 배열.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Char10-1.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
