--- a/Char11.문자/Char11-4/Char11-4.vcxproj
+++ b/Char11.문자/Char11-4/Char11-4.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{6868561b-7bf9-4ae1-9507-1849031630aa}</ProjectGuid>
-    <RootNamespace>Char10배열과포인터</RootNamespace>
+    <ProjectGuid>{b0191d64-460f-4546-b8bc-de8e3c8a91b7}</ProjectGuid>
+    <RootNamespace>Char114</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Char10-1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,10 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Char10-1.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Char10-1.h" />
+    <ClCompile Include="버퍼를 사용하는 문자 입력.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
