--- a/Char6.반복문/2.for 문/2.for 문.vcxproj
+++ b/Char6.반복문/2.for 문/2.for 문.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{5412698a-4336-4264-8a5d-0b3d0dca7e84}</ProjectGuid>
     <RootNamespace>My2for문</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>2. for 문</ProjectName>
+    <ProjectName>Char6-2. for 문</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
