--- a/Char6.반복문/3.do ~ While문/3.do ~ While문.vcxproj
+++ b/Char6.반복문/3.do ~ While문/3.do ~ While문.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{f0d7eeb9-5193-48c8-a453-64b1da718d54}</ProjectGuid>
     <RootNamespace>My3doWhile문</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Char6-3.do ~ While문</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
