--- a/Char6.반복문/4.break,contunue 분기문/4.break,contunue 분기문.vcxproj
+++ b/Char6.반복문/4.break,contunue 분기문/4.break,contunue 분기문.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{6622414c-40cb-406a-bb78-e6bce7f9f5ca}</ProjectGuid>
     <RootNamespace>My4breakcontunue분기문</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Char6-5.break,contunue 분기문</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
