--- a/Char6.반복문/Char6.반복문/Char6.반복문.vcxproj
+++ b/Char6.반복문/Char6.반복문/Char6.반복문.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{fd3629bb-4389-4b11-8fca-7b53165e74b4}</ProjectGuid>
     <RootNamespace>Char6반복문</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>1. while문</ProjectName>
+    <ProjectName>Char6-1. while문</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
