--- a/Char12.문자열/Char12-2/Char12-2.vcxproj
+++ b/Char12.문자열/Char12-2/Char12-2.vcxproj
@@ -18,14 +18,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="scanf함수를 사용한 문자열 입력.c" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{66682ee2-3719-4d40-afc1-3a73f5973beb}</ProjectGuid>
-    <RootNamespace>Char123</RootNamespace>
+    <ProjectGuid>{8b0fa39e-f31c-492f-b56b-d28b137cfc5e}</ProjectGuid>
+    <RootNamespace>Char122</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -141,6 +138,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="포인터로 문자열을 사용하는 방법.c" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
