--- a/Char12.문자열/Char12-1/Char12-1.vcxproj
+++ b/Char12.문자열/Char12-1/Char12-1.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{e2011270-6b9b-4ea0-918b-b6327894491d}</ProjectGuid>
-    <RootNamespace>Char124</RootNamespace>
+    <ProjectGuid>{0aa9cf8b-789b-42b6-b219-028f51a4d246}</ProjectGuid>
+    <RootNamespace>Char121</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Char12-10</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="문자열 붙이기.c" />
+    <ClCompile Include="문자열 상수가 주소란 증거.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
