--- a/Char12.문자열/Char12-1/Char12-1.vcxproj.filters
+++ b/Char12.문자열/Char12-1/Char12-1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="scanf함수를 사용한 문자열 입력.c">
+    <ClCompile Include="문자열 상수가 주소란 증거.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
