--- a/Char12.문자열/Char12-2/Char12-2.vcxproj.filters
+++ b/Char12.문자열/Char12-2/Char12-2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="scanf함수를 사용한 문자열 입력.c">
+    <ClCompile Include="포인터로 문자열을 사용하는 방법.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
