--- a/Char12.문자열/Char12-10/Char12-10.vcxproj
+++ b/Char12.문자열/Char12-10/Char12-10.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4c7f8c64-831a-45d2-8f25-498a387eb585}</ProjectGuid>
-    <RootNamespace>Char12</RootNamespace>
+    <ProjectGuid>{f92a5e7f-7543-4734-9633-9e1565d66416}</ProjectGuid>
+    <RootNamespace>Char1210</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Char12-8</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="strcpy함수의 사용.c" />
+    <ClCompile Include="strcat, strncat 함수를 사용한 문자열 붙이기.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
