--- a/Char12.문자열/Char12-6/Char12-6.vcxproj
+++ b/Char12.문자열/Char12-6/Char12-6.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{22871a35-e208-428f-938a-3eb8b4f735d8}</ProjectGuid>
-    <RootNamespace>Char125</RootNamespace>
+    <ProjectGuid>{317029b2-d9d5-4826-b91b-b18f56048520}</ProjectGuid>
+    <RootNamespace>Char126</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="fgets함수를 사용한 문자열 입력.c" />
+    <ClCompile Include="개행 문자로 인해 gets함수가 입력을 못하는 경우.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
