--- a/Char12.문자열/Char12-7/Char12-7.vcxproj
+++ b/Char12.문자열/Char12-7/Char12-7.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{22871a35-e208-428f-938a-3eb8b4f735d8}</ProjectGuid>
-    <RootNamespace>Char125</RootNamespace>
+    <ProjectGuid>{70d2877f-5c98-4ba5-860a-57cfba3e84a4}</ProjectGuid>
+    <RootNamespace>Char127</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="fgets함수를 사용한 문자열 입력.c" />
+    <ClCompile Include="문자열울 출력하는 puts와 fputs 함수.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
