--- a/Char12.문자열/Char12-8/Char12-8.vcxproj
+++ b/Char12.문자열/Char12-8/Char12-8.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{22871a35-e208-428f-938a-3eb8b4f735d8}</ProjectGuid>
-    <RootNamespace>Char125</RootNamespace>
+    <ProjectGuid>{d82b082d-34bc-42eb-9a87-19e48dc6f0c3}</ProjectGuid>
+    <RootNamespace>Char128</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="fgets함수를 사용한 문자열 입력.c" />
+    <ClCompile Include="strcpy함수의 사용법.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
