--- a/Char12.문자열/Char12-9/Char12-9.vcxproj
+++ b/Char12.문자열/Char12-9/Char12-9.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{22871a35-e208-428f-938a-3eb8b4f735d8}</ProjectGuid>
-    <RootNamespace>Char125</RootNamespace>
+    <ProjectGuid>{cf15ded2-34a0-46e2-b842-306091207dd2}</ProjectGuid>
+    <RootNamespace>Char129</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="fgets함수를 사용한 문자열 입력.c" />
+    <ClCompile Include="strncpy 함수를 사용한 문자열 복사.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
