--- a/Char14.다차원배열, 포인터배열/Char14-4/Char14-4.vcxproj.filters
+++ b/Char14.다차원배열, 포인터배열/Char14-4/Char14-4.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="strcpy와 기능이 같은 함수 구현.c">
+    <ClCompile Include="2차원 char배열에 동물 이름을 초기화하는 방법.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
