--- a/Char12.문자열/Char12-4/Char12-4.vcxproj.filters
+++ b/Char12.문자열/Char12-4/Char12-4.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="strcpy와 기능이 같은 함수 구현.c">
+    <ClCompile Include="gets 함수로 한 줄의 문자열 입력.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
