--- a/Char14.다차원배열, 포인터배열/Char14-4/Char14-4.vcxproj
+++ b/Char14.다차원배열, 포인터배열/Char14-4/Char14-4.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{75169ced-8419-4825-b1ab-88bac36a746f}</ProjectGuid>
-    <RootNamespace>Char1214</RootNamespace>
+    <ProjectGuid>{b2ed08cc-5ee1-4f5c-922d-3ea899df4bd7}</ProjectGuid>
+    <RootNamespace>Char144</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="직접 만드는 strcat함수.c" />
+    <ClCompile Include="2차원 char배열에 동물 이름을 초기화하는 방법.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
