--- a/Char14.다차원배열, 포인터배열/Char14-7/Char14-7.vcxproj
+++ b/Char14.다차원배열, 포인터배열/Char14-7/Char14-7.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{75169ced-8419-4825-b1ab-88bac36a746f}</ProjectGuid>
-    <RootNamespace>Char1214</RootNamespace>
+    <ProjectGuid>{c6e19cf2-ac73-4510-a89a-a17b1c03f9ab}</ProjectGuid>
+    <RootNamespace>Char147</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="직접 만드는 strcat함수.c" />
+    <ClCompile Include="여러 개의 1차원 배열을 2차원 배열처럼 사용.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
